# nostrcraft

./: .gitignore  Cargo.toml  README.md
assets/textures/: azurite.avif  iron.avif
bevy-tokio-tasks/: Cargo.toml
src/: cameras.rs  cyberspace.rs  main.rs  mining.rs  nostr.rs  resources.rs  ui_camera.rs
